# ulco26-pf-etudiant

./: .gitignore  README.md  code.list  package.list
projets/ascii-draw/: README.md  ascii-draw.cabal  default.nix
projets/ascii-draw/app/: main.hs
projets/ascii-draw/src/: MyIO.hs
projets/maze/: README.md  default.nix  maze.cabal
projets/maze/app/: main.hs
projets/maze/data/: maze1.txt  maze2.txt
projets/todo/: README.md  default.nix  hie.yaml  tasks0.txt  todo.cabal
projets/todo/app/: main.hs
projets/wordle/: README.md  default.nix  wordle.cabal
projets/wordle/app/: main.hs
projets/wordle/data/: README.md  data.tsv  dict.txt  dict20.txt  process.hs
tp1/exos/: exos.cabal
tp1/exos/app/: add.hs  expressions.hs  fonctions.hs  hello.hs
tp1/fibo/: fibo.cabal
tp1/fibo/app/: main.hs
tp1/guess/app/: main.hs
tp1/welcome/: welcome.cabal
tp1/welcome/app/: main.hs
tp2/exos/: exos.cabal
tp2/exos/app/: conditions.hs  maybe.hs  pattern-matching.hs
tp2/guess/: guess.cabal
tp2/guess/app/: main.hs
tp2/xor/: xor.cabal
tp2/xor/app/: main.hs
tp2/xor/src/: Xor.hs
tp2/xor/test/: XorSpec.hs
tp3/cowsay/: cowsay.cabal
tp3/cowsay/app/: cowsay-multi.hs  cowsay.hs
tp3/exos/: exos.cabal
tp3/exos/app/: listes.hs  tuples.hs
tp3/wc/: default.nix  wc.cabal
tp3/wc/app/: wc.hs
tp4/algos/: algos.cabal  run-deb.sh  run-nix.sh
tp4/algos/src/: Search.hs  Sort.hs
tp4/algos/test/: SearchSpec.hs  SortSpec.hs
tp4/annuaire/: annuaire.cabal
tp4/annuaire/app/: main.hs
tp4/calc/: calc.cabal
tp4/calc/app/: main.hs
tp4/exos/: exos.cabal
tp4/exos/app/: listes.hs  recursivite.hs  tco.hs
tp5/cesar/: cesar.cabal  default.nix
tp5/cesar/app/: main.hs
tp5/cesar/src/: Cesar.hs
tp5/cesar/test/: CesarSpec.hs
tp5/exos/: exos.cabal
tp5/exos/app/: comprehension.hs  filter.hs  fold.hs  map.hs  recap.hs
tp6/draw-positions/: README.md  draw-positions.cabal
tp6/draw-positions/app/: Main.hs
tp6/draw-positions/data/: test1.txt
tp6/exos/: exos.cabal
tp6/exos/app/: composition.hs  curry.hs  evaluation.hs  lambda.hs
tp6/spiral/: README.md  hie.yaml  spiral.cabal
tp6/spiral/app/: Main.hs
