cabal-version:      3.0
name:               exos
version:            0.1.0.0

common deps
    ghc-options:      -Wall -O2
    build-depends:    base, random
    hs-source-dirs:   app
    default-language: GHC2024

executable hello
    import:           deps
    main-is:          hello.hs

executable expressions
    import:           deps
    main-is:          expressions.hs

executable fonctions
    import:           deps
    main-is:          fonctions.hs

executable add
    import:           deps
    main-is:          add.hs

