cabal-version:      3.0
name:               exos
version:            0.1.0.0

common deps
    ghc-options:      -Wall -O2
    build-depends:    base
    hs-source-dirs:   app
    default-language: GHC2024

executable conditions
    import:           deps
    main-is:          conditions.hs

executable pattern-matching
    import:           deps
    main-is:          pattern-matching.hs

executable maybe
    import:           deps
    main-is:          maybe.hs

