cabal-version:      3.0
name:               xor
version:            0.1.0.0

common deps
    ghc-options:      -Wall -O2
    build-depends:    base
    default-language: GHC2024

library
    import:           deps
    hs-source-dirs:   src/
    exposed-modules:  Xor

executable xor
    import:           deps
    hs-source-dirs:   app
    main-is:          main.hs
    build-depends:    xor

test-suite test
    import:           deps
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    build-depends:    hspec, xor
    main-is:          Spec.hs
    other-modules:    XorSpec



