cabal-version:      3.0
name:               exos
version:            0.1.0.0

common deps
    ghc-options:      -Wall -O2
    build-depends:    base
    hs-source-dirs:   app
    default-language: GHC2024

executable listes
    import:           deps
    main-is:          listes.hs

executable tuples
    import:           deps
    main-is:          tuples.hs


