cabal-version:      3.0
name:               algos
version:            0.1.0.0

common deps
    ghc-options:      -Wall -O2
    build-depends:    base, vector
    default-language: GHC2024

library
    import:           deps
    hs-source-dirs:   src/
    exposed-modules:  Search Sort

test-suite test
    import:           deps
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    build-depends:    hspec, algos
    main-is:          Spec.hs
    other-modules:    SearchSpec SortSpec

