cabal-version:      3.0
name:               cesar
version:            0.1.0.0

common deps
    ghc-options:      -Wall -O2
    build-depends:    base
    hs-source-dirs:   app
    default-language: GHC2024

library
    import:           deps
    hs-source-dirs:   src/
    exposed-modules:  Cesar

executable cesar
    import:           deps
    main-is:          main.hs
    build-depends:    cesar

test-suite test
    import:           deps
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    build-depends:    hspec, cesar
    main-is:          Spec.hs
    other-modules:    CesarSpec

