cabal-version:      3.0
name:               draw-positions
version:            0.1.0.0

common deps
    ghc-options:      -Wall -O2
    build-depends:    base, vector
    default-language: GHC2024

executable draw-positions
    import:             deps
    hs-source-dirs:     app
    main-is:            Main.hs

