cabal-version:      3.0
name:               exos
version:            0.1.0.0

common deps
    ghc-options:      -Wall -O2
    build-depends:    base
    hs-source-dirs:   app
    default-language: GHC2024

executable curry
    import:           deps
    main-is:          curry.hs

executable evaluation
    import:           deps
    main-is:          evaluation.hs

executable lambda
    import:           deps
    main-is:          lambda.hs

executable composition
    import:           deps
    main-is:          composition.hs


